--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -31,5 +31,5 @@ spec:
   ports:
     - port: 80
       targetPort: 8080
-      nodePort: 30000
-  type: NodePort
+      nodePort: 31000
+  type: LoadBalancer
